--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -21,17 +21,16 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-D:\study_software\STM32\MyProject\Stm32Project\项目：鸽子喂料机v11\鸽子喂料机\Project.uvprojx
-Project File Date:  04/06/2022
+D:\study_software\STM32\MyProject\Stm32Project\项目：鸽子喂料机v13\项目：鸽子喂料机v12\鸽子喂料机\Project.uvprojx
+Project File Date:  04/20/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Study\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling Relay.c...
 compiling main.c...
-compiling NRF24L01.c...
 linking...
-Program Size: Code=10712 RO-data=1788 RW-data=128 ZI-data=1648  
+Program Size: Code=10756 RO-data=1788 RW-data=136 ZI-data=1648  
+FromELF: creating hex file...
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
