--- a/遥控器/Objects/Project.build_log.htm
+++ b/遥控器/Objects/Project.build_log.htm
@@ -21,57 +21,12 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-D:\study_software\STM32\MyProject\Stm32Project\项目：鸽子喂料机v13\项目：鸽子喂料机v12\遥控器\Project.uvprojx
+D:\study_software\STM32\MyProject\Stm32Project\项目：鸽子喂料机v14\遥控器\Project.uvprojx
 Project File Date:  04/20/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Study\Keil5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-assembling startup_stm32f10x_md.s...
-compiling core_cm3.c...
-compiling misc.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_bkp.c...
-compiling stm32f10x_adc.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_crc.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_exti.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_fsmc.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_usart.c...
-compiling stm32f10x_sdio.c...
-compiling stm32f10x_wwdg.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_tim.c...
-compiling ADC1.c...
-compiling DMA1.c...
-compiling Delay.c...
-compiling SPI1.c...
-compiling TIM3.c...
-compiling Internal_Flash.c...
-compiling TIM2.c...
-compiling LED.c...
-compiling OLED.c...
-compiling Key.c...
-compiling Encoder.c...
-compiling NRF24L01.c...
-compiling Switch.c...
-compiling Rocker.c...
-compiling Buzzer.c...
-compiling stm32f10x_it.c...
-compiling main.c...
-linking...
-Program Size: Code=13312 RO-data=1828 RW-data=104 ZI-data=1648  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -86,7 +41,7 @@ Package Vendor: Keil
   C:\Study\Keil5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:06
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
