--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -21,67 +21,18 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TCM.DLL V1.32.0.0
  
 <h2>Project:</h2>
-C:\Pigeon-feeder\STM32Project\Pigeon-feeder\Pigeon-feeder\鸽子喂料机\Project.uvprojx
+C:\Pigeon-feeder\STM32Project\Pigeon-feeder\鸽子喂料机\Project.uvprojx
 Project File Date:  05/02/2022
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'C:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-assembling startup_stm32f10x_md.s...
-compiling core_cm3.c...
-compiling stm32f10x_bkp.c...
-compiling system_stm32f10x.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_crc.c...
-compiling stm32f10x_cec.c...
-compiling misc.c...
-compiling stm32f10x_adc.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_exti.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_fsmc.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_sdio.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_tim.c...
-compiling Delay.c...
-compiling TIM2.c...
-compiling stm32f10x_wwdg.c...
-compiling stm32f10x_usart.c...
-compiling TIM4.c...
 compiling USART.c...
-compiling NRF24L01.c...
-compiling Relay.c...
-compiling OLED.c...
-compiling LED.c...
-compiling TSDA.c...
-HardWare\TSDA.c(8): warning:  #177-D: variable "checkorder"  was declared but never referenced
-  	uint8_t orders[4],i,checkorder,k;
-HardWare\TSDA.c(8): warning:  #177-D: variable "k"  was declared but never referenced
-  	uint8_t orders[4],i,checkorder,k;
-HardWare\TSDA.c(39): warning:  #177-D: variable "checkorder"  was declared but never referenced
-  	int8_t datas[4],i,checkorder;
-HardWare\TSDA.c: 3 warnings, 0 errors
-compiling bsp_usart.c...
 compiling main.c...
-User\main.c(79): error:  #20: identifier "SETTINGSTATE" is undefined
-  			case SETTINGSTATE://下
-User\main.c(82): error:  #20: identifier "CONTROLSTATE" is undefined
-  			case CONTROLSTATE://中
-User\main.c(85): error:  #20: identifier "DEBUGSTATE" is undefined
-  			case DEBUGSTATE://上
-User\main.c: 0 warnings, 3 errors
-compiling Robot.c...
-compiling stm32f10x_it.c...
-compiling Hcsr04.c...
-".\Objects\Project.axf" - 3 Error(s), 3 Warning(s).
+linking...
+Program Size: Code=13094 RO-data=1790 RW-data=136 ZI-data=1680  
+FromELF: creating hex file...
+".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -95,8 +46,7 @@ Package Vendor: Keil
   C:\Pigeon-feeder\Keil\ARM\PACK\Keil\STM32F1xx_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Target not created.
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
