--- a/遥控器/Objects/Project.build_log.htm
+++ b/遥控器/Objects/Project.build_log.htm
@@ -27,9 +27,10 @@ Project File Date:  04/15/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling State1.c...
 compiling main.c...
 linking...
-Program Size: Code=13388 RO-data=1828 RW-data=108 ZI-data=1644  
+Program Size: Code=13208 RO-data=1828 RW-data=104 ZI-data=1648  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
