--- a/遥控器/Objects/Project.build_log.htm
+++ b/遥控器/Objects/Project.build_log.htm
@@ -26,53 +26,14 @@ Project File Date:  04/16/2023
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
-Rebuild target 'Target 1'
-assembling startup_stm32f10x_md.s...
-compiling core_cm3.c...
-compiling stm32f10x_dbgmcu.c...
-compiling stm32f10x_bkp.c...
-compiling system_stm32f10x.c...
-compiling misc.c...
-compiling stm32f10x_dac.c...
-compiling stm32f10x_crc.c...
-compiling stm32f10x_dma.c...
-compiling stm32f10x_adc.c...
-compiling stm32f10x_cec.c...
-compiling stm32f10x_can.c...
-compiling stm32f10x_exti.c...
-compiling stm32f10x_flash.c...
-compiling stm32f10x_iwdg.c...
-compiling stm32f10x_i2c.c...
-compiling stm32f10x_rtc.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_pwr.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_fsmc.c...
-compiling stm32f10x_sdio.c...
-compiling stm32f10x_tim.c...
-compiling Delay.c...
-compiling stm32f10x_usart.c...
-compiling TIM2.c...
-compiling TIM3.c...
-compiling stm32f10x_wwdg.c...
-compiling ADC1.c...
-compiling SPI1.c...
-compiling DMA1.c...
-compiling LED.c...
-compiling Internal_Flash.c...
-compiling State2.c...
-compiling Key.c...
-compiling Encoder.c...
-compiling OLED.c...
-compiling Switch.c...
-compiling NRF24L01.c...
-compiling Buzzer.c...
+Build target 'Target 1'
 compiling Rocker.c...
-compiling stm32f10x_it.c...
 compiling State1.c...
-compiling main.c...
+compiling NRF24L01.c...
+compiling Switch.c...
 compiling State3.c...
+compiling Key.c...
+compiling main.c...
 linking...
 Program Size: Code=19780 RO-data=2380 RW-data=112 ZI-data=1648  
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
@@ -89,7 +50,7 @@ Package Vendor: Keil
   C:\Pigeon-feeder\Keil\ARM\PACK\Keil\STM32F1xx_DFP\2.4.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:02
 </pre>
 </body>
 </html>
