code refactoring_3.3 modify logic of feed2

--- a/鸽子喂料机/Objects/Project.htm
+++ b/鸽子喂料机/Objects/Project.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\Project.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\Project.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060528: Last Updated: Sun Apr 16 20:05:04 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060528: Last Updated: Sun Apr 16 20:33:39 2023
 <BR><P>
 <H3>Maximum Stack Usage =        176 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -502,7 +502,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[c9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;While_Init
 </UL>
 
-<P><STRONG><a name="[57]"></a>Get_Distance</STRONG> (Thumb, 80 bytes, Stack size 8 bytes, feed.o(i.Get_Distance))
+<P><STRONG><a name="[57]"></a>Get_Distance</STRONG> (Thumb, 88 bytes, Stack size 8 bytes, feed.o(i.Get_Distance))
 <BR><BR>[Stack]<UL><LI>Max Depth = 64<LI>Call Chain = Get_Distance &rArr; Hcsr04_GetDistance4 &rArr; __aeabi_dmul
 </UL>
 <BR>[Calls]<UL><LI><a href="#[5b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Hcsr04_GetDistance4
@@ -648,7 +648,7 @@ Global Symbols
 <LI><a href="#[78]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__aeabi_cdcmple
 <LI><a href="#[77]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;OLED_ShowString
 </UL>
-<BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
+<BR>[Called By]<UL><LI><a href="#[c9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;While_Init
 </UL>
 
 <P><STRONG><a name="[4]"></a>NMI_Handler</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, stm32f10x_it.o(i.NMI_Handler))
@@ -1346,13 +1346,14 @@ Global Symbols
 <LI><a href="#[92]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;TSDA_Data
 </UL>
 
-<P><STRONG><a name="[c9]"></a>While_Init</STRONG> (Thumb, 260 bytes, Stack size 8 bytes, main.o(i.While_Init))
+<P><STRONG><a name="[c9]"></a>While_Init</STRONG> (Thumb, 266 bytes, Stack size 8 bytes, main.o(i.While_Init))
 <BR><BR>[Stack]<UL><LI>Max Depth = 152<LI>Call Chain = While_Init &rArr; NRF24L01_ReceiveData &rArr; NRF24L01_ReadData &rArr; SPI_SendByte &rArr; SPI_TIMEOUT_UserCallback &rArr; OLED_ShowNum &rArr; OLED_ShowChar &rArr; OLED_SetCursor &rArr; OLED_WriteCommand &rArr; OLED_I2C_SendByte
 </UL>
 <BR>[Calls]<UL><LI><a href="#[73]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_SetBits
 <LI><a href="#[69]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_ResetBits
 <LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Data_Analyse
 <LI><a href="#[9d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;StartFeed
+<LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MonitorFeed
 <LI><a href="#[57]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Get_Distance
 <LI><a href="#[54]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Get_BirdNum
 <LI><a href="#[7f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;NRF24L01_ReceiveData
@@ -1364,7 +1365,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[44]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
-<P><STRONG><a name="[44]"></a>main</STRONG> (Thumb, 342 bytes, Stack size 8 bytes, main.o(i.main))
+<P><STRONG><a name="[44]"></a>main</STRONG> (Thumb, 338 bytes, Stack size 8 bytes, main.o(i.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 176<LI>Call Chain = main &rArr; Init &rArr; NRF24L01_Init &rArr; NRF24L01_WriteByte &rArr; SPI_SendByte &rArr; SPI_TIMEOUT_UserCallback &rArr; OLED_ShowNum &rArr; OLED_ShowChar &rArr; OLED_SetCursor &rArr; OLED_WriteCommand &rArr; OLED_I2C_SendByte
 </UL>
 <BR>[Calls]<UL><LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;GPIO_Init
@@ -1375,7 +1376,6 @@ Global Symbols
 <LI><a href="#[9e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;State1
 <LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Init
 <LI><a href="#[5c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HandleData
-<LI><a href="#[75]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MonitorFeed
 <LI><a href="#[99]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SpeedConversion
 <LI><a href="#[91]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Robot_Move
 <LI><a href="#[77]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;OLED_ShowString
