--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -27,14 +27,12 @@ Project File Date:  04/16/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
+compiling Feed.c...
 compiling main.c...
-User\main.c(322): warning:  #177-D: variable "LastSwitchNum"  was declared but never referenced
-  	static uint8_t LastSwitchNum, NormalNum, LastLinkFlag, NowLinkFlag;
-User\main.c: 1 warning, 0 errors
 linking...
-Program Size: Code=14118 RO-data=1790 RW-data=168 ZI-data=1680  
+Program Size: Code=14134 RO-data=1790 RW-data=168 ZI-data=1680  
 FromELF: creating hex file...
-".\Objects\Project.axf" - 0 Error(s), 1 Warning(s).
+".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
 
