--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -27,9 +27,9 @@ Project File Date:  04/19/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling main.c...
+compiling State3.c...
 linking...
-Program Size: Code=22346 RO-data=2342 RW-data=180 ZI-data=1676  
+Program Size: Code=22746 RO-data=2342 RW-data=180 ZI-data=1676  
 FromELF: creating hex file...
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
