--- a/鸽子喂料机/Objects/Project.build_log.htm
+++ b/鸽子喂料机/Objects/Project.build_log.htm
@@ -27,10 +27,11 @@ Project File Date:  04/23/2023
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 5 (build 528)', folder: 'D:\Pigeon-feeder\Keil\ARM\ARMCC\Bin'
 Build target 'Target 1'
-compiling State3.c...
+compiling TrackingLine.c...
+compiling Robot.c...
 compiling main.c...
 linking...
-Program Size: Code=22954 RO-data=2342 RW-data=140 ZI-data=1732  
+Program Size: Code=23210 RO-data=2342 RW-data=144 ZI-data=1728  
 FromELF: creating hex file...
 ".\Objects\Project.axf" - 0 Error(s), 0 Warning(s).
 
